[tool.poetry]
name = "cherrypy-prometheus-demo"
version = "0.1.0"
description = ""
authors = ["bigbugboy <liuxu-ynl@foxmail.com>"]
readme = "README.md"
packages = [{include = "cherrypy_prometheus_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
cherrypy = "^18.8.0"
prometheus-client = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
